# Cosmo

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile
res/: entitytypes.lua  options.txt
res/entities/: core.lua  coreBullet.lua  cruiser.lua  cruiserLaser01.lua  mothership.lua
res/shaders/: jets.frag  space.frag
src/: Application.h  IEventHandler.h  IUpdatable.h  main.cpp
src/Control/: Controller.h  IControllable.h  IController.h  Joystick.h  Keyboard.h  Service.h  System.h
src/Control/ConcreteControllers/: Keyboard.cpp  Keyboard.h
src/Entities/: BlockAllocator.h  Bullet.h  Container.h  Cruiser.cpp  Cruiser.h  EntitySprite.h  GameDirector.h  HealthPoints.h  ICollisionable.h  IDestroyable.h  IEntity.h  IHasHealthPoints.h  Mothership.cpp  Mothership.h  Starship.h
src/Entities/Enemies/: Scout.cpp  Scout.h
src/Entities/Enemy/: Scout.h
src/Entity/: Bullet.h  Collision.h  Cruiser.cpp  Cruiser.h  Drawable.h  EntityHandler.h  GameDirector.h  GameEntity.h  Handler.h  IHPOwner.h  ISpriteOwner.h  IUpdateable.h  Service.cpp  Service.h  Starship.h  Trajectory.h
src/Entity/Enemy/: Scout.h
src/Info/: Config.h  Holder.h  Manager.h  ReadTexture.h  Resource.h  ResourcesStorage.cpp  ResourcesStorage.h  ShaderBox.h  TextureBox.h  TypeBoxes.cpp  TypeBoxes.h
src/UI/: Animation.h  FPSService.h  Game.cpp  Game.h  GameOver.cpp  GameOver.h  MainMenu.cpp  MainMenu.h  Menu.h  Scene.cpp  Scene.h  StarField.cpp  StarField.h  Window.h
src/Utils/: DirectedWeapon.h  ExtendedVector.h  HPBar.h  ParameterBar.h  Trajectory.h  VectorUtils.h  Weapon.h
